force-app/main/default/objects/Game__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether this game is currently active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>