force-app/main/default/objects/Game__c/fields/Game_Song_List__c.field-meta.xml
<CustomField>
    <fullName>Game_Song_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game Song List</label>
    <referenceTo>Game_Song_List__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <type>Lookup</type>
</CustomField>