force-app/main/default/objects/Game__c/listViews/All_Games.listView-meta.xml
<ListView>
    <fullName>All_Games</fullName>
    <columns>NAME</columns>
    <columns>Event_Description__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Games</label>
</ListView>